--- a/3-Software-and-Workflow/SoftwareWorkflow.tex
+++ b/3-Software-and-Workflow/SoftwareWorkflow.tex
@@ -28,7 +28,7 @@
 
 \mode<presentation>
 {
-  \usetheme{Warsaw}
+  \usetheme{Berkeley}
   % or ...
 
   \setbeamercovered{transparent}
@@ -37,6 +37,7 @@
 
 \usepackage{tikz}
 \usepackage{graphicx}
+\graphicspath{{C:/Users/garret/GoogleDrive/CEGA/CEGA-Programs/BITSS/Supporting-Material-Slides/APHRC/Images/}}
 \usepackage[english]{babel}
 % or whatever
 
@@ -50,7 +51,7 @@
 
 
 \title[Short Paper Title] % (optional, use only with long paper titles)
-{Practical Steps for Increasing Openness and Reproducibility}
+{Software and Workflow for Reproducible Research}
 
 \subtitle
 {Discussion} % (optional)
@@ -64,18 +65,20 @@
 {
   \inst{1}%
   UC Berkeley: Berkely Initiatiative for Transparency in the Social Sciences\\
-  Center for Open Science
+  Berkeley Institute for Data Science
 }
 % - Use the \inst command only if there are several affiliations.
 % - Keep it simple, no one is interested in your street address.
 
 \date[Short Occasion] % (optional)
-{April 24, 2015 UC Riverside}
+{APHRC, Summer 2015}
 
 \subject{Talks}
 % This is only inserted into the PDF information catalog. Can be left
 % out. 
 
+\pgfdeclareimage[height=2cm]{university-logo}{C:/Users/garret/GoogleDrive/CEGA/CEGA-Programs/BITSS/Supporting-Material-Slides/APHRC/Images/BITSSlogo.png}
+ \logo{\pgfuseimage{university-logo}}
 
 % Delete this, if you do not want the table of contents to pop up at
 % the beginning of each subsection:
@@ -113,9 +116,6 @@
 
  \url{bitss.org}
  
-\includegraphics[height=0.75in]{COS.PNG}
-
-\url{centerforopenscience.org}
 \end{frame}
 
 \begin{frame}{Outline}
@@ -136,45 +136,13 @@
 \section{Problems}
 \begin{frame}{Problems}
  \begin{itemize}
- \item Publication bias
- \item Specification Searching
+ \item Publication bias (see previous talk)
+ \item Specification Searching (see previous talk)
  \item Data not available
  \item Code not available/unintelligible
  \end{itemize}
 \end{frame}
 
-\subsection{Publication Bias}
- \begin{frame}{Publication Bias}
-  \begin{itemize}
-  \item
-  Only signficant results get published, even though the null result might be the truth, so we can't distinguish the truly significant from the 5\% we should expect due to randomness.
-  
-  \item
-  See \href{http://www.nejm.org/doi/full/10.1056/NEJMsa065779}{Turner et al. 2008} for medicine or \href{http://www.sciencemag.org/content/345/6203/1502}{Franco et al. 2014} for social sciences. 
- \end{itemize}
- \end{frame}
- 
-{ % all template changes are local to this group.
-    \setbeamertemplate{navigation symbols}{}
-    \begin{frame}[plain]
-        \begin{tikzpicture}[remember picture,overlay]
-            \node[at=(current page.center)] {
-                \includegraphics[height=\paperheight]{TurnerFigure1.PNG}
-            };
-        \end{tikzpicture}
-     \end{frame}
-}
-
-\subsection{Specification Searching}
- \begin{frame}{Specification Searching}
-  \begin{itemize}
-  \item
-  AKA Data mining, data dredging, p-hacking, fishing.
-  
-  \item
-  Flexibility in analytical decisions lets you display practically anything as statistically significant. \href{http://pss.sagepub.com/content/22/11/1359}{Simmons, Nelson, Simonsohn (2011)} `proves' that listening to the Beatles makes you younger.
-  \end{itemize}
- \end{frame}
  
 \subsection{Irreproducible Workflow}
  \begin{frame}{Irreproducible Workflow}
@@ -190,8 +158,8 @@
 \section{Solutions}
 \begin{frame}{Solutions}
 \begin{itemize}[<+->]
-\item Study Registry
-\item Pre-Analysis Plan
+\item Study Registry (see previous talk)
+\item Pre-Analysis Plan (see previous talk)
 \item Reproducible Workflow
  \begin{itemize}
  \item Literate Programing 
@@ -201,99 +169,6 @@
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Tools}
-\subsection{Registries}
-\begin{frame}{Specific Tools}
-\begin{itemize}[<+->]
-\item Study Registry
-\begin{itemize}
- \item \href{http://clinicaltrials.gov}{NIH's Clinical Trial Registry}
- \item \href{http://www.socialscienceregistry.org}{AEA Social Science Registry}
- \item \href{http://e-gap.org/design-registration}{Experiments in Governance and Politics (EGAP)}
- \item \href{http://ridie.3ieimpact.org/}{Registry for International Development Impact Evaluations (RIDIE)}
- \item \href{http://osf.io}{Open Science Framework (OSF) \beamergotobutton{Link}}
-\end{itemize}
-\end{itemize}
-\end{frame}
-
-\subsection{Pre-Analysis Plan}
-\begin{frame}{Pre-Analysis Plan}
-What is a PAP?
-\begin{itemize}
-\item
-From 3ie: ``A pre-analysis plan is a detailed description of the analysis to be conducted that is written in advance of seeing the data on impacts of the program being evaluated. It may specify hypotheses to be tested, variable construction, equations to be estimated, controls to be used, and other aspects of the analysis. A key function of the pre-analysis plan is to increase transparency in the research. By setting out the details in advance of what will be done and before knowing the results, the plan guards against data mining and specification searching. Researchers are encouraged to develop and upload such a plan with their study registration, but it is not required for registration.''
-\end{itemize}
-\end{frame}
-
-\begin{frame}{Origin: FDA's Guidance for Industry}
-``E9 Statistical Principles for Clinical Trials'' (1998)
-\href{http://www.fda.gov/downloads/drugs/guidancecomplianceregulatoryinformation/guidances/ucm073137.pdf}{\beamergotobutton{Link}}
-
-\S V Data Analysis Considerations
-\begin{enumerate}
-\item Prespecification of the Analysis
-\item Analysis Sets
-\item Missing Values and Outliers
-\item Data Transformation
-\item Estimation, Confidence Intervals, and Hypothesis Testing
-\item Adjustment of Significance and Confidence Levels
-\item Subgroups, Interactions, and Covariates
-\item Integrity of Data and Computer Software Validity
-\end{enumerate}
-\end{frame}
-
-
-\begin{frame}{Glennerster, Takavarasha Suggestions}
-\textit{Running Randomized Evaluations}
-\begin{enumerate}[<.->]
-\def\labelenumi{\arabic{enumi}.}
-\item
-  the main outcome measures,
-\item
-  which outcome measures are primary and which are secondary,
-\item
-  the precise composition of any families that will be used for mean
-  effects analysis,
-  \begin{itemize}
-  \item Mean effects: FWER, FDR using \href{http://dx.doi.org/10.1198/016214508000000841}{Anderson (JASA 2008)}.
-  \end{itemize}
-\item
-  the subgroups that will be analyzed,
-\item
-  the direction of expected impact if we want to use a one-sided test,
-  and
-\item
-  the primary specification to be used for the analysis.
-\end{enumerate}
-\end{frame}
-
-\begin{frame}{McKenzie Suggestions}
-\href{http://blogs.worldbank.org/impactevaluations/a-pre-analysis-plan-checklist}{World Bank Development Impact Blog}
-
-\begin{enumerate}[<.->]
-\item
-  Description of the sample to be used in the study
-\item
-  Key data sources
-\item
-  Hypotheses to be tested throughout the causal chain
-\item
-  Specify how variables will be constructed
-\item
-  Specify the treatment effect equation to be estimated
-\item
-  What is the plan for how to deal with multiple outcomes and multiple
-  hypothesis testing?
-\item
-  Procedures to be used for addressing survey attrition
-\item
-  How will the study deal with outcomes with limited variation?
-\item
-  If you are going to be testing a model, include the model
-\item
-  Remember to archive it
-\end{enumerate}
-\end{frame}
 
 \subsection{Workflow}
 \begin{frame}{Reproducible Workflow}
