--- a/3-Software-and-Workflow/SoftwareWorkflow.tex
+++ b/3-Software-and-Workflow/SoftwareWorkflow.tex
@@ -50,7 +50,7 @@
 % does not look nice, try deleting the line with the fontenc.
 
 
-\title[Short Paper Title] % (optional, use only with long paper titles)
+\title[Software and Workflow] % (optional, use only with long paper titles)
 {Software and Workflow for Reproducible Research}
 
 \subtitle
@@ -78,7 +78,7 @@
 % out. 
 
 \pgfdeclareimage[height=2cm]{university-logo}{C:/Users/garret/GoogleDrive/CEGA/CEGA-Programs/BITSS/Supporting-Material-Slides/APHRC/Images/BITSSlogo.png}
- \logo{\pgfuseimage{university-logo}}
+\logo{\pgfuseimage{university-logo}}
 
 % Delete this, if you do not want the table of contents to pop up at
 % the beginning of each subsection:
@@ -93,7 +93,7 @@
 % If you wish to uncover everything in a step-wise fashion, uncomment
 % the following command: 
 
-%\beamerdefaultoverlayspecification{<+->}
+\beamerdefaultoverlayspecification{<.->}
 
 \begin{document}
 
@@ -116,13 +116,13 @@
   % You might wish to add the option [pausesections]
 \end{frame}
 
-
 \section{Introduction}
+
 \begin{frame}{Reproducibility \& Transparency}
 \begin{itemize}
 \item What are problems associated with reproducibility?
 \item What are solutions to these problems?
-\item What are practical tools to implement these solutions?
+\item \textbf{What are practical tools to implement these solutions?}
 \end{itemize}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -164,8 +164,8 @@
 \begin{frame}{Reproducible Workflow}
  \begin{itemize}
  \item Literate Programing 
- \item R Markdown and \href{http://rstudio.com}{R Studio} to write dynamic documents.
- \item Version control with \href{http://www.github.com}{Github} or \href{http://osf.io}{OSF}. 
+ \item Version control with \href{http://www.github.com}{Github} or \href{http://osf.io}{OSF}.
+  \item R Markdown and \href{http://rstudio.com}{R Studio} to write dynamic documents.
  \item Data Sharing
  \begin{itemize}
  \item \href{http://www.thedata.org}{Harvard's Dataverse}
@@ -175,23 +175,151 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Literate Programming}
 \begin{frame}{Literate Programming}
-First, you should be \textit{programming}. Working in Excel is not reproducible.
-Reinhart and Rogoff. If you are using SPSS, there is a `syntax' command to record all the commands you run. Similarly in Stata, commandlog.
+\begin{itemize}
+\item First, \textit{programming} is key to reproducibility. Working in Excel is not reproducible.
+\item See Reinhart and Rogoff ``Growth in a Time of Debt'' controversy: 
+\begin{itemize}
+	\item
+	Original Paper, \href{https://www.aeaweb.org/articles.php?doi=10.1257/aer.100.2.573}{\textit{AER P \& P} 2010}
+	\item 
+	\href{http://cje.oxfordjournals.org/content/38/2/257}{Herndon et. al (2013)} finding.
+	\item \href{http://www.newyorker.com/news/john-cassidy/the-reinhart-and-rogoff-controversy-a-summing-up}{\textit{New Yorker} summary}.
+\end{itemize}
 
-Better is to write scripts. R, Stata, SAS, Python, whatever. Open source has some advantages (being free, for one) but you're going to use what everyone in your field uses.
+\item Random number generation in Excel: set seed with \href{http://www.statisticshowto.com/use-random-number-generator-excel/}{Data Analysis Toolpak}. 
+\end{itemize}
+\end{frame}
 
-Second, literate programming. Write code to be read by a human being, with the code for the computer secondary.
+\begin{frame}{Literate Programming}
+\begin{itemize}
+\item  If you are using SPSS, use of `syntax' to record all the commands you run is simple. (See \href{http://www.ats.ucla.edu/stat/spss/seminars/spss_syntax/}{UCLA tutorial}.) Similarly in Stata, `commandlog'.
+
+\item Better is to write scripts. R, Stata, SAS, Python, or whatever you please.
+
+\item Open source has some advantages (being free, for one) but you're going to use what everyone in your field uses.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Literate Programming}
+\begin{itemize}
+\item
+Second, \textit{literate programming} is key to reproducibility. Write code to be read by a human being, with the code for the computer secondary.
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Literate Programming}
+\begin{quote}
+``I believe that the time is ripe for significantly better documentation of programs, and that we can best achieve this by considering programs to be works of literature. Hence, my title: ``Literate Programming.''
+
+Let us change our traditional attitude to the construction of programs: Instead of imagining that our main task is to instruct a computer what to do, let us concentrate rather on explaining to human beings what we want a computer to do.
+\end{quote}
+(cont.)
+\end{frame}
+
+\begin{frame}{Literate Programming}
+\begin{quote}
+``The practitioner of literate programming can be regarded as an essayist, whose main concern is with exposition and excellence of style. Such an author, with thesaurus in hand, chooses the names of variables carefully and explains what each variable means. He or she strives for a program that is comprehensible because its concepts have been introduced in an order that is best for human understanding, using a mixture of formal and informal methods that reinforce each other.''
+\end{quote}
+--Donald Knuth \textit{The Computer Journal}, 1984
+\href{http://www.literateprogramming.com/index.html}{\beamerbutton{Quotes}}
+\href{http://comjnl.oxfordjournals.org/content/27/2/97.full.pdf+html}{\beamerbutton{Original}}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Version Control}
 \begin{frame}{Version Control}
-Use version control.
+\begin{itemize}[<+->]
+\item
+Using version control (AKA revision control) can help to make your work more reproducible.
 
-DCVS distributed version control system
+\item
+What is version control?
 
-gentzkow and shapiro's RA guide
+\begin{quote}
+Version control is a system that records changes to a file or set of files over time so that you can recall specific versions later. For the examples in this book you will use software source code as the files being version controlled, though in reality you can do this with nearly any type of file on a computer.
+\end{quote}
+--Git, \href{https://git-scm.com/book/en/v2/Getting-Started-About-Version-Control}{About Version Control}
 
+%\item Distributed Version Control Systems (DCVS) let multiple users control the same files in this manner.
+\end{itemize}
 \end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Version Control}
+With version control you can:
+\begin{itemize}
+\item Collaborate 
+\item Track who made every change
+\item Easily switch between versions of files
+\item Compare versions of files
+\item Backup
+\item Work with the same files on different machines
+\item Experiment with a new version of code without breaking things
+\end{itemize}
+\href{http://stackoverflow.com/questions/1408450/why-should-i-use-version-control}{\beamerbutton{Link1}}
+\href{http://tex.stackexchange.com/questions/1118/what-are-the-advantages-of-using-version-control-git-cvs-etc-in-latex-documen}{\beamerbutton{Link2}}
+\href{http://stackoverflow.com/questions/1408450/why-should-i-use-version-control}{\beamerbutton{Link3}}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Version Control}
+Places you're already using version control without knowing it:
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+{ % all template changes are local to this group.
+    \setbeamertemplate{navigation symbols}{}
+    \begin{frame}[plain]
+        \begin{tikzpicture}[remember picture,overlay]
+            \node[at=(current page.center)] {
+                \includegraphics[height=\paperheight]{googledocs.PNG}
+            };
+        \end{tikzpicture}
+     \end{frame}
+
+ \setbeamertemplate{navigation symbols}{}
+    \begin{frame}[plain]
+        \begin{tikzpicture}[remember picture,overlay]
+            \node[at=(current page.center)] {
+                \includegraphics[width=\paperwidth]{elephantswiki.PNG}
+            };
+        \end{tikzpicture}
+     \end{frame}
+}
+\begin{frame}{Version Control}
+Places you're already using version control without knowing it:
+\begin{itemize}
+	\item
+	Google Docs
+	\item
+	Wikipedia
+	\item
+	Every piece of software you use.
+\end{itemize}
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Version Control}
+Isn't this just a complicated version of the ``date and initial'' method?
+\begin{itemize}
+\item regressions2015.08.24.do
+\item regressions2015.08.25.do
+\item regressions2015.08.25GC.do
+\item Hassle
+\item Confusion
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Version Control}
+\begin{quote}Here is a good rule of thumb: If you are trying to solve a problem, and there are multi-billion dollar  firms  whose  entire  business  model  depends  on  solving  the  same  problem,  and  there  are whole courses at your university devoted to how to solve that problem, you might want to figure out what the experts do and see if you can’t learn something from it.
+
+...
+
+Not one piece of commercial software you have on your PC, your phone, your tablet,
+your car, or any other modern computing device was written with the “date and initial” method.
+\end{quote}
+--Matthew Gentzkow and Jesse M. Shapiro ``\href{http://web.stanford.edu/~gentzkow/research/CodeAndData.pdf}{Code and Data for the Social Sciences: A Practitioner's Guide}''
+\end{frame}
+
 
 { % all template changes are local to this group.
     \setbeamertemplate{navigation symbols}{}
@@ -219,48 +347,77 @@ gentzkow and shapiro's RA guide
         \end{tikzpicture}
      \end{frame}
 }
-
-\begin{frame}
-GitHub and OSF Examples
+%%%%%%%%%%%%%%%
+\begin{frame}{Examples}
+GitHub and OSF Examples:
+\begin{itemize}
+\item
+Slides for this workshop on Github.com
+\item \url{http://www.github.com/bitss/aphrc}
+\item
+Slides also available on the Open Science Framework
+ \item \url{https://osf.io/m5ey4/}
+\end{itemize}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Dynamic Documents}
 \begin{frame}{Dynamic Documents}
+\begin{itemize}[<+->]
+\item
+Even if you write perfect (version controlled) code, you can still run into problems going from your code to paper. This is where \textit{dynamic documents} come in.
+\item
 A dynamic document includes your data, code, analysis, and output all in one place. Fully automated, you can guarantee no mistakes from copying and pasting.
-
-Do this with R Markdown and R Studio or Ketchup in Stata.
+\item
+Do this with \href{http://rmarkdown.rstudio.com/}{R Markdown} in \href{https://www.rstudio.com/}{R Studio} or 
+\href{http://haghish.com/statistics/stata-blog/reproducible-research/ketchup.php}{Ketchup} in Stata.
+\end{itemize}
 \end{frame}
 
-\begin{frame}
-R Studio Example
 
+\begin{frame}{Dynamic Documents}
+\begin{itemize}
+\item Include tables by linking to a file, instead of a static image.
+\item Include number by linking to a value calculated by an analysis file, instead of a static number typed manually.
+\item Automatically update tables and numbers.
+\item Produce entire paper with one or two clicks.
+\end{itemize} 
+\end{frame}
+
+
+\begin{frame}{Examples}
+\begin{itemize}
+\item
+R Studio Example
+\item
 Stata Example
+\end{itemize}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Data Sharing}
-\begin{frame}{Data Sharing}
-Make all your data and code publicly available.
+%\subsection{Data Sharing}
+%\begin{frame}{Data Sharing}
+%Make all your data and code publicly available.
 
-Put it in a place where people can find it. 
+%Put it in a place where people can find it. 
 
- For APHRC that might be the APHRC repository.
-\end{frame} 
+% For APHRC that might be the APHRC repository.
+%\end{frame} 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 
 \section{Conclusion}
 \begin{frame}{Conclusion}
 Simple tools exist to help you transparently and reproducibly take your research from beginning to end. 
 \begin {itemize}
-\item Open Science Framework
-\item Trial Registries
+\item Trial Registries (previous slides)
+\item Pre-Analysis Plans (previous slides)
 \item Version Control
+\item Open Science Framework
 \item Dynamic Documents
-\item Trusted Public Data Archive
+\item Trusted Public Data Archive (next slides)
 \end{itemize} 
 \vspace{0.25in}
 Read more in my \href{http://github.com/garretchristensen/manual}{\textit{Manual of Best Practices in Transparent Social Science Research}} on GitHub.
 \end{frame}
+
 
 
 \end{document}
