HAlfway through Data and Replication

--- a/3-Software-and-Workflow/SoftwareWorkflow.tex
+++ b/3-Software-and-Workflow/SoftwareWorkflow.tex
@@ -53,8 +53,7 @@
 \title[Software and Workflow] % (optional, use only with long paper titles)
 {Software and Workflow for Reproducible Research}
 
-\subtitle
-{Discussion} % (optional)
+%\subtitle{Discussion} % (optional)
 
 \author[Christensen] % (optional, use only with lots of authors)
 {Garret Christensen\inst{1}}
@@ -223,6 +222,28 @@ Let us change our traditional attitude to the construction of programs: Instead 
 --Donald Knuth \textit{The Computer Journal}, 1984
 \href{http://www.literateprogramming.com/index.html}{\beamerbutton{Quotes}}
 \href{http://comjnl.oxfordjournals.org/content/27/2/97.full.pdf+html}{\beamerbutton{Original}}
+\end{frame}
+
+\subsection{Workflow Suggestions}
+\begin{frame}{Organizing and Recording Workflow}
+\begin{quote}
+``Reproducibility is just collaboration with people you don't know,
+including yourself next week''
+\end{quote}
+\begin{flushright}
+---Philip Stark, UC Berkeley Statistics
+\end{flushright}
+\end{frame}
+
+\begin{frame}{Organizing and Recording Workflow}
+ Practical coding and organizational suggestions
+ \begin{itemize}
+ \item Long (2008) \textit{The Workflow of Data Analysis Using Stata}
+ \item Making any changes to a file that has been posted/shared means it gets a new name.
+ \item Use version commands to ensure others get same results.
+ \item Keep a daily research log.
+ \item Take the tiem 
+\end{itemize}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Version Control}
