--- a/4-DataSharing-and-Rep/Data-and-Replication.tex
+++ b/4-DataSharing-and-Rep/Data-and-Replication.tex
@@ -185,9 +185,12 @@ If not in the methods section of the article (of limited length), supplementary 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Data Sharing}
 \begin{frame}{Data Sharing}
+\begin{itemize}
+\item
 To build on the work of others, data must be shared.
-
+\item
 Data sharing is associated with more citations (causality unclear). \href{http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0000308}{Piwowar et al. 2007} 
+\end{itemize}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -266,46 +269,166 @@ Repositories will last longer than your own website.
 Repositories are more easily searchable by other researchers.
 \item
 Repositories will store your data in a non-proprietary format that won't become obsolete.
+\item 
+Repositories manage meta-data better.
+\item
+Repositories create digital citable identifiers (DOI).
+
 \end{itemize}
 \end{frame}
 
 \begin{frame}{Data Sharing}
-Data repositories
-
-Harvard's Dataverse
-
-Check the journal
+Examples of Trusted Repositories:
+\begin{itemize}
+\item \href{http://dataverse.harvard.edu}{Harvard's Dataverse}
+\item \href{http://datadryad.org/}{Data Dryad}
+\item \href{http://figshare.com}{figshare}
+\item \href{http://osf.io}{Open Science Framework}
+\item Check the journal--they may use one of these
+\begin{itemize}
+\item \href{https://dataverse.harvard.edu/dataverse/restat}{\textit{REStat}'s Dataverse}
+\end{itemize}
+\end{itemize}
 \end{frame}
 
 \begin{frame}{APHRC Repository}
-APHRC has its own repository. You should use it.
+APHRC has created the APHRC Microdata Portal
+\begin{itemize}
+\item 30 Studies and growing
+\item \url{http://aphrc.org/catalog/microdata/index.php/catalog}
+\item Managed by Cheikh Faye
+\end{itemize}
 \end{frame}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Replication}
 \begin{frame}{Replication}
-Define Replication
+\begin{itemize}
+\item
+With data available, we can begin to replicate studies.
 
-Michael Clemens
+\item 
+We should be very careful about what we mean by ``replication.''
+
+\item \href{http://www.cgdev.org/sites/default/files/CGD-Working-Paper-399-Clemens-Meaning-Failed-Replications.pdf}{``The Meaning of Failed Replications''} Michael Clemens, CGD Working Paper 399.
+\end{itemize}
+\end{frame}
+
+
+{ % all template changes are local to this group.
+    \setbeamertemplate{navigation symbols}{}
+    \begin{frame}[plain]
+        \begin{tikzpicture}[remember picture,overlay]
+            \node[at=(current page.center)] {
+                \includegraphics[width=\paperwidth]{ClemensReplication.PNG}
+            };
+        \end{tikzpicture}
+     \end{frame}
+}
+
+
+\begin{frame}{Replication}
+Why Replicate? \href{https://osf.io/ap6xz/}{Motivation} and suggestions from Nicole Janz of \href{https://politicalsciencereplication.wordpress.com/}{Political Science Replication} and Cambridge University
+\begin{itemize}
+\item For science in general:
+\begin{itemize}\pause
+\item Uncover misconduct and sloppy science
+\item Confirm previous findings and generalizability
+\item Point to misuse of statistical methods
+\end{itemize}
+\item For you as researchers:
+\begin{itemize}\pause
+\item Learn statistics
+\item Jump to research frontier
+\item Publish
+\item Make your own research routinely reproducible
+\item Fun
+\end{itemize}
+\end{itemize}
 \end{frame}
 
 
 \begin{frame}{Replication}
-How to do a replication
+Which study should you pick to replicate?
+\begin{itemize}
+\item Don't select a study with methods that you don't know or can't learn within a reasonable time.
+\item Pick a recent study (<5 yo) from a good journal.
+\item Data (and code) should be publicly available.
+\item The journal that published the original study has published replications before.
+\end{itemize}
 \end{frame}
-
 
 \begin{frame}{Replication}
-Encourage it, make it publishable
+Which journals publish replications?
+\begin{itemize}
+\item List from \href{http://econjwatch.org/articles/replications-in-economics-a-progress-report}{The Replication Network study, Duvendack et al.}
+\item Sadly fairly limtied in economics (10).
+\item Selected journals from \href{https://osf.io/ap6xz/}{Janz (2015)}
+\end{itemize}
 \end{frame}
 
+{ % all template changes are local to this group.
+    \setbeamertemplate{navigation symbols}{}
+    \begin{frame}[plain]
+        \begin{tikzpicture}[remember picture,overlay]
+            \node[at=(current page.center)] {
+                \includegraphics[width=\paperwidth]{DuvendackReplicationJournals.PNG}
+            };
+        \end{tikzpicture}
+     \end{frame}
+
+\setbeamertemplate{navigation symbols}{}
+    \begin{frame}[plain]
+        \begin{tikzpicture}[remember picture,overlay]
+            \node[at=(current page.center)] {
+                \includegraphics[width=\paperwidth]{JanzReplicationJournals.PNG}
+            };
+        \end{tikzpicture}
+     \end{frame}
+}
+
+\begin{frame}{Replication}
+How exactly to replicate?
+\begin{itemize}
+\item Be systematic: write a pre-analysis plan.
+\item Don't just go on a fishing expedition. We all know that if you dig hard enough, you can find a specification that makes results appear weaker. Don't selectively report those specifications.
+\item Be courteous and professional.
+\item Take an entirely systematic approach:
+\begin{itemize}
+\item \href{https://osf.io/wx7ck/}{Many Labs Project}
+\item \href{https://osf.io/gvm2z/}{Crowdsource your analysis}
+\end{itemize}
+\end{itemize}
+\end{frame}
+
+{ % all template changes are local to this group.
+    \setbeamertemplate{navigation symbols}{}
+    \begin{frame}[plain]
+        \begin{tikzpicture}[remember picture,overlay]
+            \node[at=(current page.center)] {
+                \includegraphics[width=\paperwidth]{ManyLabs.PNG}
+            };
+        \end{tikzpicture}
+     \end{frame}
+
+\setbeamertemplate{navigation symbols}{}
+    \begin{frame}[plain]
+        \begin{tikzpicture}[remember picture,overlay]
+            \node[at=(current page.center)] {
+                \includegraphics[width=\paperwidth]{Crowdsourcing.PNG}
+            };
+        \end{tikzpicture}
+     \end{frame}
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusion}
 \begin{frame}{Conclusion}
 \begin{itemize}
-\item Share your data
-\item Replicate
+\item Science builds on previous work
+\item To do that, work must be public
+\item Share your data and code publicly
+\item Replicate the work of others
 \end{itemize}
 \end{frame}
 
